--- a/style.css
+++ b/style.css
@@ -3,17 +3,25 @@ h1
     position: relative;
     color:red !important;
 }
-h1::after 
-{
-    content:'ДО';
-}
 h1::before
 {
-    content:'ПОСЛЕ'; 
+    content:'ДО'; 
 }
+h1::after 
+{
+    content:'ПОСЛЕ';
+}
+h1::first-letter
+{
+    color: blue;
+}
+h1::first-line
+{
+    padding-left: 50px;
+}
+
 .title
 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50 px;
 } 
 .page-title
