--- a/style.css
+++ b/style.css
@@ -1,34 +1,47 @@
-h1 
+html,
+body 
 {
-    position: relative;
-    color:red !important;
-}
-h1::before
-{
-    content:'ДО'; 
-}
-h1::after 
-{
-    content:'ПОСЛЕ';
-}
-h1::first-letter
-{
-    color: blue;
-}
-h1::first-line
-{
-    padding-left: 50px;
+  width: 100%; 
+  margin: 0;
+  padding: 0;
 }
 
-.title
-{
-    font-size: 50 px;
-} 
-.page-title
-{
-    font-size: 20 px;
+.body {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-top: 147px;
 }
-.page-title
-    #title{
-        border:1px solid green;
-    }
+
+.page-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 147px;
+    display: flex;
+    align-items: center;
+    background-color: rgba(222, 222, 222, 0.5);
+    backdrop-filter: blur(20px);
+    z-index: 100;
+}
+.page-header__container {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 1414px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+.main {
+  flex: 1 0 auto;
+  background-color: coral;
+}
+
+.page-footer {
+  flex: 0 0 auto;
+  background-color: gray;
+}
