--- a/style.css
+++ b/style.css
@@ -22,10 +22,27 @@ body
     height: 147px;
     display: flex;
     align-items: center;
-    background-color: rgba(222, 222, 222, 0.5);
+    background-color: rgba(222, 222, 222, 0.98);
     backdrop-filter: blur(20px);
     z-index: 100;
-}
+  }
+  @supports (backdrop-filter: blur(20px)) {
+    .page-header {
+      background-color: rgba(222, 222, 222, 0.5);
+      backdrop-filter: blur(20px);
+    }
+  }
+  .page-header__logo {
+    flex-shrink: 0;
+    width: 202px;
+    height: 147px;
+    font-size: 0;
+    text-decoration: none;
+  }
+  .page-header__logo-icon {
+    width: 100%;
+    height: 100%;
+  }
 .page-header__container {
     box-sizing: border-box;
     display: flex;
@@ -45,3 +62,20 @@ body
   flex: 0 0 auto;
   background-color: gray;
 }
+.page-header__nav {
+    display: flex;
+    align-items: baseline;
+    margin: 0 auto;
+  }
+  .page-header__nav-link {
+    margin: 0 25px;
+    color: #1f1e1e;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    text-decoration: none;
+    transition: color 0.2s;
+  }
+  .page-header__nav-link:hover {
+    color: #bc3324;
+  }
