--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 html,
-body 
-{
-  width: 100%; 
-  margin: 0;
-  padding: 0;
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .body {
@@ -26,24 +25,28 @@ body
     background-color: rgba(222, 222, 222, 0.98);
     backdrop-filter: blur(20px);
     z-index: 100;
-  }
-  @supports (backdrop-filter: blur(20px)) {
+}
+
+@supports (backdrop-filter: blur(20px)) {
     .page-header {
-      background-color: rgba(222, 222, 222, 0.5);
-      backdrop-filter: blur(20px);
+        background-color: rgba(222, 222, 222, 0.5);
+        backdrop-filter: blur(20px);
     }
-  }
-  .page-header__logo {
+}
+
+.page-header__logo {
     flex-shrink: 0;
     width: 202px;
     height: 147px;
     font-size: 0;
     text-decoration: none;
-  }
-  .page-header__logo-icon {
+}
+
+.page-header__logo-icon {
     width: 100%;
     height: 100%;
-  }
+}
+
 .page-header__container {
     box-sizing: border-box;
     display: flex;
@@ -53,22 +56,26 @@ body
     margin: 0 auto;
     padding-left: 40px;
     padding-right: 40px;
-  }
+}
+
 .main {
-  flex: 1 0 auto;
-  background-color: coral;
+    flex: 1 0 auto;
+    background-color: coral;
 }
 
 .page-footer {
-  flex: 0 0 auto;
-  background-color: gray;
+    flex: 0 0 auto;
+    background-color: gray;
 }
+
 .page-header__nav {
     display: flex;
     align-items: baseline;
     margin: 0 auto;
-  }
-  .page-header__nav-link {
+    flex-grow: 1; /* Allow the nav to grow */
+}
+
+.page-header__nav-link {
     margin: 0 25px;
     color: #1f1e1e;
     font-weight: 600;
@@ -76,15 +83,17 @@ body
     line-height: 25px;
     text-decoration: none;
     transition: color 0.2s;
-  }
-  .page-header__nav-link:hover {
+}
+
+.page-header__nav-link:hover {
     color: #bc3324;
-  }
-  .btn {
+}
+
+.btn {
     display: inline-block;
     box-sizing: border-box;
     padding: 15px 40px;
-    border: 1px solid #1F1E1E;
+    border: 2px solid #1F1E1E; /* Make border thicker */
     background-color: transparent;
     outline: none;
     color: #1F1E1E;
@@ -97,14 +106,16 @@ body
     transition: color 0.2s, background-color 0.2s, border-color 0.2s;
     overflow: hidden;
     cursor: pointer;
-  }
-  .btn:hover {
+}
+
+.btn:hover {
     background-color: #1F1E1E;
     color: #ffffff;
-  }
-  .page-header__right-block {
+}
+
+.page-header__right-block {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 202px;
-  }
+}
